fix: mobile page-nav alignment

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -499,21 +499,21 @@ $badge__name-misc__inlineSpacing: max(10px, 1dvh);
 
 .page-nav {
     background-color: $boxBackgroundColor;
-    border-radius: 50px;
+    border-radius: 25px;
     display: flex;
-    font-size: 1em;
+    font-size: 0.8em;
     margin-bottom: 20px;
     margin-top: 80px;
     margin-inline: auto;
     text-align: center;
-    width: 90%;
+    width: 100%;
 
     a {
         background-color: $borderColor;
         border-color: $headingColor;
-        border-radius: 50px;
+        border-radius: 25px;
         border-style: solid;
-        border-width: 5px;
+        border-width: 3px;
         padding: 0.5em;
         padding-left: 1em;
         padding-right: 1em;
@@ -574,6 +574,7 @@ $badge__name-misc__inlineSpacing: max(10px, 1dvh);
         font-size: clamp(1.75dvh, 1dvh + 0.8rem, 1.8dvh);
         margin-bottom: max(20px, 2dvh);
         margin-top: max(80px, 8dvh);
+        width: 90%;
     
         a {
             border-radius: max(100px, 10dvh);
